updates to mealplanner.html

--- a/mealplanner.html
+++ b/mealplanner.html
@@ -27,11 +27,20 @@
       <!-- Nutrition Search Section -->
       <div class="nutrition-search">
         <h2>Find Your Perfect Meal Plan</h2>
-        <input type="text" id="searchQuery" placeholder="Enter a food item or nutrient...">
+        <input type="text" id="searchQuery" placeholder="Enter a food item or meal type...">
         <button onclick="handleSearch()">Search</button>
       </div>
+
       <section id="recommendations">
-        <!-- AI-powered meal recommendations will appear here -->
+        <!-- Nutritionix Results -->
+        <div id="nutritionix-results">
+          <h2>Nutritionix Results</h2>
+        </div>
+
+        <!-- Edamam Meal Planner Results -->
+        <div id="edamam-results">
+          <h2>Edamam Meal Planner Results</h2>
+        </div>
       </section>
     </section>
   </main>
