--- a/mealplanner.html
+++ b/mealplanner.html
@@ -44,7 +44,7 @@
       </section>
     </section>
   </main>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
   <footer>
     <p>&copy; 2025 LionFit. All rights reserved.</p>
   </footer>
