Uodated so that search results show as organized table

--- a/mealplanner.html
+++ b/mealplanner.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,11 +36,39 @@
         <!-- Nutritionix Results -->
         <div id="nutritionix-results">
           <h2>Nutritionix Results</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Food</th>
+                <th>Calories</th>
+                <th>Protein (g)</th>
+                <th>Fat (g)</th>
+                <th>Carbs (g)</th>
+              </tr>
+            </thead>
+            <tbody id="nutritionix-table-body">
+              <!-- Dynamically populated rows -->
+            </tbody>
+          </table>
         </div>
 
         <!-- Edamam Meal Planner Results -->
         <div id="edamam-results">
           <h2>Edamam Meal Planner Results</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Recipe</th>
+                <th>Calories</th>
+                <th>Meal Type</th>
+                <th>Source</th>
+                <th>Link</th>
+              </tr>
+            </thead>
+            <tbody id="edamam-table-body">
+              <!-- Dynamically populated rows -->
+            </tbody>
+          </table>
         </div>
       </section>
     </section>
