changed api keys and updated html

--- a/mealplanner.html
+++ b/mealplanner.html
@@ -35,24 +35,25 @@
       </div>
 
       <section id="recommendations">
-        <!-- Nutritionix Results -->
-        <div id="nutritionix-results">
-          <h2>Nutritionix Results</h2>
+        
+        <div id="edamam-results">
+          <h2>Edamam Meal Planner Results</h2>
           <table>
             <thead>
               <tr>
-                <th>Food</th>
+                <th>Recipe</th>
                 <th>Calories</th>
-                <th>Protein (g)</th>
-                <th>Fat (g)</th>
-                <th>Carbs (g)</th>
+                <th>Meal Type</th>
+                <th>Source</th>
+                <th>Link</th>
               </tr>
             </thead>
-            <tbody id="nutritionix-table-body">
+            <tbody id="edamam-table-body">
               <!-- Dynamically populated rows -->
             </tbody>
           </table>
         </div>
+        
 
         <!-- Edamam Meal Planner Results -->
         <div id="edamam-results">
