--- a/mealplanner.html
+++ b/mealplanner.html
@@ -7,11 +7,9 @@
   <title>Meal Planner - LionFit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
 </head>
 <body>
   <header>
-    <!-- Centered logo and navigation -->
     <img src="lionFitLogo.png" alt="LionFit Logo" class="logo" loading="lazy">
     <nav class="navbar">
       <ul>
@@ -27,7 +25,6 @@
   <main>
     <section class="meal-planner">
       <h1>Meal Planner</h1>
-      <!-- Nutrition Search Section -->
       <div class="nutrition-search">
         <h2>Find Your Perfect Meal Plan</h2>
         <input type="text" id="searchQuery" placeholder="Enter a food item or meal type...">
@@ -35,29 +32,8 @@
       </div>
 
       <section id="recommendations">
-        
         <div id="edamam-results">
-          <h2>Edamam Meal Planner Results</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>Recipe</th>
-                <th>Calories</th>
-                <th>Meal Type</th>
-                <th>Source</th>
-                <th>Link</th>
-              </tr>
-            </thead>
-            <tbody id="edamam-table-body">
-              <!-- Dynamically populated rows -->
-            </tbody>
-          </table>
-        </div>
-        
-
-        <!-- Edamam Meal Planner Results -->
-        <div id="edamam-results">
-          <h2>Edamam Meal Planner Results</h2>
+          <h2>Edamam Results</h2>
           <table>
             <thead>
               <tr>
