--- a/mealplanner.html
+++ b/mealplanner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meal Planner - LionFit</title>
+  <title>Meal Planner - FatSecret Integration</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -24,7 +24,7 @@
   
   <main>
     <section class="meal-planner">
-      <h1>Meal Planner</h1>
+      <h1>FatSecret-Powered Meal Planner</h1>
       
       <!-- Nutrition Search Section -->
       <div class="nutrition-search">
@@ -43,7 +43,7 @@
       <section id="results">
         <!-- Nutrition Results -->
         <div id="nutrition-results">
-          <h2>Nutrition Analysis</h2>
+          <h2>Nutrition Analysis (FatSecret API)</h2>
           <table>
             <thead>
               <tr>
@@ -62,7 +62,7 @@
 
         <!-- Recipe Results -->
         <div id="recipe-results">
-          <h2>Recipes</h2>
+          <h2>Recipe Search (FatSecret API)</h2>
           <table>
             <thead>
               <tr>
@@ -82,7 +82,7 @@
 
   <script src="./app.js"></script>
   <footer>
-    <p>&copy; 2025 LionFit. All rights reserved.</p>
+    <p>&copy; 2025 LionFit. All rights reserved. Powered by FatSecret API.</p>
   </footer>
 </body>
 </html>
